fixed image spacing

--- a/css/index.css
+++ b/css/index.css
@@ -30,18 +30,21 @@ body {
 }
 
 #content p {
-  line-height: 36px; 
-  font-size:36px;
+  /*line-height: 36px; */
+  font-size:24px;
 }
 
 .image {
-  display:inline;
+  display:inline-block;
+  position: relative;
   /*box-shadow: 10px 10px 5px #888888;*/
-  width:30%;
+  width:25%;
   /*padding: 70px 0px 30px 0px;*/
   /*min-width: 300px;*/
   /*border:2px solid;*/
   border-radius:5px;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
 }
 #emailImage {
   display: block;
@@ -100,15 +103,15 @@ body {
 }
 h2{ 
   text-align: center;
-  color:#fff;
-  font-size: 72px;
-  text-shadow: 0 5px 8px rgba(0,0,0,.4);
+  color:#5f5f5f;
+  font-size: 50px;
+  /*text-shadow: 0 5px 8px rgba(0,0,0,.4);*/
   position: relative;
   margin: 0 auto 0px;
   padding: 0 0px;
-  padding-top:50px;
+  padding-top:10px;
   /*padding-left: 1em;*/
-  font-family: 'FreeStyle', sans-serif;
+  font-family: 'SimFang', serif;
   font-weight: normal;
   /*border: 1px dotted #fff;*/
 }
@@ -167,7 +170,7 @@ h3{
   right: 0; 
   width: 100%;
   height:40px;
-  margin: 0px 0px 0px 0px;   
+  margin: 10px 0px 0px 0px;   
   text-align: right;   
   display: inline-block;  
   /*background-color: white;*/
@@ -224,11 +227,18 @@ h3{
 }
 
 #leftImage {
-  float: left;
+  /*float: left;*/
+
+  /*left:6.25%;*/
+}
+
+#centerImage {
+  /*left:37.5%;*/
 }
 
 #rightImage {
-  float: right;
+  /*float: right;*/
+  /*right:6.25%;*/
 }
 
 .highlightedText {
@@ -302,9 +312,15 @@ h3{
   /*margin-top: 20px;*/
 }
 #homelogo {
-  left: 0;
-  height:35px;
+  left: 10px;
+  height:55px;
   width: auto;
   position: fixed;
   padding: 2px 0px 0px 5px;
+  margin-top: -10px;
+}
+#houseText {
+  font-family: 'SimFang', serif;
+  font-size:115px; 
+  letter-spacing:9px;
 }
